infra/deployments/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-strip-api
  namespace: blog-prod
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-be-ingress
  namespace: blog-prod
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: blog-prod-traefik-strip-api@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
